Fix payment lock alignment.

--- a/src/css/components/checkout/checkout.styl
+++ b/src/css/components/checkout/checkout.styl
@@ -332,7 +332,7 @@ checkout
 .lock
   background: url(/images/icons/lock.svg)
   position: absolute
-  top: 16px
+  top: 9px
   right: 12px
 
 .arrow-left
